Fixed up styles and added a list of buttons to collapse. also added back in max hights for panels and not they have scrolls

--- a/python/style.css
+++ b/python/style.css
@@ -51,13 +51,13 @@ button{
 
 
 #run-deets{
-    height: auto;
+    height: 20em;
     overflow: auto;
     padding: 0px 0px 20px 0px;
 }
 
 #cve-table{
-    height: auto;
+    height: 20em;
     overflow: auto;
 }
 
@@ -97,4 +97,7 @@ table#diff td{
    display: none;
 }
 
+#btn-list{
+  list-style: none;
+}
 
